[gd_scene load_steps=10 format=3 uid="uid://jrrw0al7cmk2"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_gkwjp"]
[ext_resource type="Texture2D" uid="uid://bye260iuxl2lc" path="res://resources/sprites/background/black.png" id="1_woy50"]
[ext_resource type="PackedScene" uid="uid://uaucp1f7lejb" path="res://prefabs/hud.tscn" id="2_0odat"]
[ext_resource type="PackedScene" uid="uid://dxmiee10xv7jp" path="res://prefabs/player_ship.tscn" id="2_f148u"]
[ext_resource type="AudioStream" uid="uid://bfjt3y77dgv0s" path="res://resources/sfx/sfx_game_over.wav" id="6_o067p"]
[ext_resource type="PackedScene" uid="uid://cfe3f0ycp0ho3" path="res://prefabs/enemy_spawner.tscn" id="6_x232y"]
[ext_resource type="AudioStream" uid="uid://dl2brjxauarck" path="res://resources/sfx/sfx_player_die.wav" id="7_fvbjf"]
[ext_resource type="AudioStream" uid="uid://cunblpyaifujl" path="res://resources/sfx/sfx_player_hit.ogg" id="7_jbl7w"]
[ext_resource type="AudioStream" uid="uid://bivclxe85iabj" path="res://resources/sfx/sfx_enemy_die.wav" id="9_2hjq2"]

[node name="Level_1" type="Node2D"]
script = ExtResource("1_gkwjp")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_0odat")]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_woy50")
stretch_mode = 1

[node name="PlayerShip" parent="." instance=ExtResource("2_f148u")]
position = Vector2(300, 554)

[node name="EnemySpawner" parent="." instance=ExtResource("6_x232y")]

[node name="Audio" type="Node" parent="."]

[node name="GameOverSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_o067p")
volume_db = -5.0

[node name="PlayerHitSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_jbl7w")
volume_db = -10.0

[node name="PlayerDestroyedSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_fvbjf")
volume_db = -10.0

[node name="EnemyDestroyedSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_2hjq2")
volume_db = -10.0
